@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- $Id: opretty.html,v 1.19 2007/08/21 13:42:59 deraugla Exp $ -->
+  <!-- $Id: opretty.html,v 1.20 2007/08/21 17:50:22 deraugla Exp $ -->
   <!-- Copyright (c) 2007 INRIA -->
   <title>Pretty Printing ocaml programs</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -217,17 +217,17 @@ of <code>e2</code>.</p>
 <h3>Dangling else, bar, semicolon</h3>
 
 <p>In normal syntax, there are cases where it is necessary to enclose
-expressions between parentheses (or
-between <span class="parenthesis">begin</span>
-and <span class="parenthesis">end</span>, which is equivalent in that
-syntax). Three tokens may cause problems: the "<code>else</code>", the
-vertical bar "<code>|</code>" and the semicolon "<code>;</code>". Here
-are examples where the presence of these tokens constraints the
-previous expression to be parenthesized. In these three examples,
-removing
-the <span class="parenthesis">begin</span>..<span class="parenthesis">end</span>
-enclosers would change the meaning of the expression because the
-dangling token would be included in that expression:</p>
+  expressions between parentheses (or
+  between <span class="parenthesis">begin</span>
+  and <span class="parenthesis">end</span>, which is equivalent in
+  that syntax). Three tokens may cause problems: the
+  "<code>else</code>", the vertical bar "<code>|</code>" and the
+  semicolon "<code>;</code>". Here are examples where the presence of
+  these tokens constraints the previous expression to be
+  parenthesized. In these three examples, removing
+  the <span class="parenthesis">begin</span>..<span class="parenthesis">end</span>
+  enclosers would change the meaning of the expression because the
+  dangling token would be included in that expression:</p>
 
 <p>Dangling else:</p>
 
@@ -407,9 +407,132 @@ necessary and remains the empty string.</p>
    nor a let..in sequence, return None.</dd>
 </dl>
 
-<h2>Example</h2>
+<h2>Example : repeat..until</h2>
 
-<p>... to be written ...</p>
+<p>This pretty prints the example
+  <a href="syntext.html#a:An-example-:-repeat..until">repeat..until</a>
+  statement programmed in the chapter <a href="syntext.html">Syntax
+  extensions</a> (first version generating a "<tt>while</tt>"
+  statement).</p>
+
+<h3>The code</h3>
+
+<p>The pattern generated by the "repeat" statement is recognized
+  (sequence ending with a "<tt>while</tt>" whose contents is the same
+  than the beginning of the sequence) by the function "is_repeat" and
+  the repeat statement is pretty printed in its initial form using the
+  function "horiz_vertic" of the Pretty module. File
+  "<tt>pr_repeat.ml</tt>":</p>
+
+<pre>
+  #load "pa_extprint.cmo";
+  #load "q_MLast.cmo";
+
+  open Pcaml;
+  open Pretty;
+  open Prtools;
+
+  value eq_expr_list el1 el2 =
+    if List.length el1 <> List.length el2 then False
+    else List.for_all2 eq_expr el1 el2
+  ;
+
+  value is_repeat el =
+    match List.rev el with
+    [ [<:expr< while not $e$ do { $list:el2$ } >> :: rel1] ->
+        eq_expr_list (List.rev rel1) el2
+    | _ -> False ]
+  ;
+
+  value semi_after pr pc = pr {(pc) with aft = sprintf "%s;" pc.aft};
+
+  EXTEND_PRINTER
+    pr_expr:
+      [ [ <:expr< do { $list:el$ } >> when is_repeat el ->
+            match List.rev el with
+            [ [<:expr< while not $e$ do { $list:el$ } >> :: _] ->
+                horiz_vertic
+                  (fun () ->
+                     sprintf "%srepeat %s until %s%s"
+                       pc.bef
+                       (hlistl (semi_after curr) curr
+                          {(pc) with bef = ""; aft = ""} el)
+                       (curr {(pc) with bef = ""; aft = ""} e)
+                       pc.aft)
+                  (fun () ->
+                     let s1 = sprintf "%srepeat" (tab pc.ind) in
+                     let s2 =
+                       vlistl (semi_after curr) curr
+                         {(pc) with
+                          ind = pc.ind + 2;
+                          bef = tab (pc.ind + 2);
+                          aft = ""}
+                         el
+                     in
+                     let s3 =
+                       sprintf "%suntil %s" (tab pc.ind)
+                         (curr {(pc) with bef = ""} e)
+                     in
+                     sprintf "%s\n%s\n%s" s1 s2 s3)
+            | _ -> assert False ] ] ]
+    ;
+  END;
+</pre>
+
+<h3>Compilation</h3>
+
+<pre>
+  ocamlc -pp camlp5r -I +camlp5 -c pr_repeat.ml 
+</pre>
+
+<h3>Testing</h3>
+
+<p>Getting the same files "foo.ml" and "bar.ml" of the repeat syntax
+  example:</p>
+
+<pre>
+  $ cat bar.ml
+  #load "./foo.cmo";
+  value x = ref 42;                                                  
+  repeat
+    print_int x.val;
+    print_endline "";
+    x.val := x.val + 3
+  until x.val > 70;
+
+  $ camlp
+</pre>
+
+<p>Without the pretty printing kit:</p>
+
+<pre>
+  $ camlp5r pr_r.cmo bar.ml
+  #load "./foo.cmo";
+  value x = ref 42;                                                  
+  do {
+    print_int x.val;
+    print_endline "";
+    x.val := x.val + 3;
+    while not (x.val > 70) do {
+      print_int x.val;
+      print_endline "";
+      x.val := x.val + 3
+    }
+  };
+</pre>
+
+<p>With the pretty printing kit:</p>
+
+<pre>
+  $ camlp5r pr_r.cmo ./pr_repeat.cmo bar.ml -l 75
+  #load "./foo.cmo";
+  value x = ref 42;                                                  
+  repeat
+    print_int x.val;
+    print_endline "";
+    x.val := x.val + 3
+  until x.val > 70;
+</pre>
 
 <div class="trailer">
 </div>
