@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- $Id: syntext.html,v 1.8 2007/07/25 13:08:43 deraugla Exp $ -->
+  <!-- $Id: syntext.html,v 1.9 2007/08/21 17:50:22 deraugla Exp $ -->
   <!-- Copyright (c) 2007 INRIA -->
   <title>syntax extensions</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -118,7 +118,7 @@
   complex as desired. See the chapter
   about <a href="ml_ast.html">syntax trees</a>.</p>
 
-<h2>An example</h2>
+<h2>An example : repeat..until</h2>
 
 <p>A classical extension is the programmation of the "repeat" statement.
   The "repeat" statement is like a "while" except that the loop is executed
@@ -273,8 +273,6 @@
 <pre>
   ocamlopt -pp camlp5r bar.ml
 </pre>
-
-<p>... work in progress ...</p>
 
 <div class="trailer">
 </div>
