@@ -10,7 +10,7 @@
 (*                                                                     *)
 (***********************************************************************)
 
-(* $Id: pcaml.mli,v 1.11 2007/08/20 09:16:18 deraugla Exp $ *)
+(* $Id: pcaml.mli,v 1.12 2007/08/21 17:50:22 deraugla Exp $ *)
 
 (** Language grammar, entries and printers.
 
@@ -140,6 +140,22 @@ module OldPrinters :
 type directive_fun = option MLast.expr -> unit;
 value add_directive : string -> directive_fun -> unit;
 value find_directive : string -> directive_fun;
+
+(** {6 equality over abstact syntax trees (ignoring locations)} *)
+
+value eq_expr : MLast.expr -> MLast.expr -> bool;
+value eq_patt : MLast.patt -> MLast.patt -> bool;
+value eq_ctyp : MLast.ctyp -> MLast.ctyp -> bool;
+value eq_str_item : MLast.str_item -> MLast.str_item -> bool;
+value eq_sig_item : MLast.sig_item -> MLast.sig_item -> bool;
+value eq_module_expr : MLast.module_expr -> MLast.module_expr -> bool;
+value eq_module_type : MLast.module_type -> MLast.module_type -> bool;
+value eq_class_sig_item :
+  MLast.class_sig_item -> MLast.class_sig_item -> bool;
+value eq_class_str_item :
+  MLast.class_str_item -> MLast.class_str_item -> bool;
+value eq_class_type : MLast.class_type -> MLast.class_type -> bool;
+value eq_class_expr : MLast.class_expr -> MLast.class_expr -> bool;
 
 (**/**)
 
