@@ -1,5 +1,6 @@
 (* camlp5r *)
 (* This file has been generated by program: do not edit! *)
+(* Copyright (c) INRIA 2007 *)
 
 (* Module [Fstream]: functional streams *)
 
