@@ -2,6 +2,7 @@ Camlp5 Version 4.08:
 ---------------------
 
 * [no date] Updated documentation.
+* [21 Aug 07] Added equality functions over syntax trees in module Pcaml.
 * [21 Aug 07] Improved compiled version (camlp5o.opt) to add the fact
   that the grammar is LL(n) for rules starting with n terminals.
 * [20 Aug 07] Updated library interface comments.
